                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 03-10-2006 fixed: if you canceled the 'scan all / scan new' dialog in the music window, it would still scan.
 - 03-10-2006 fixed: ftp playback in mplayer where broken due to yet another url parsing mistake
 - 03-10-2006 changed: Scrollspeed of RSS feeds the same in all resolutions.
 - 03-10-2006 fixed: [ 1568300 ] Add/Edit Source Dialogue Remove all Paths bug.
 - 02-10-2006 added: [ 1568369 ] Fix for strange characters in web interface. thx to benmat!
 - 02-10-2006 fixed: [ 1568845 ] Unable to access Delete from context menu
 - 02-10-2006 fixed: don't allow preset locking if the visualisation has no presets.
 - 02-10-2006 fixed: [ 1561317 ] Browse and load RAR:ed subtitles don't work. also added zip support.
 - 02-10-2006 fixed: browse for artist thumb was a pita.
 - 01-10-2006 fixed: [ 1568291 ] Saving large playlist fails
 - 01-10-2006 fixed: [ 1568607 ] XBMC 2.0.0 Web Control bookmarks
 - 01-10-2006 fixed: [ 1568158 ] "Leave as Is" LED setting broken
 - 30-09-2006 fixed: shoutcast genres with characters that isn't allowed by http urls, would fail du to a huge result. ex R&b.

----- 2.0 -----
 - 29-09-2006 added: A spanking new (skinnable) 3D music Visualiser: Vortex, created by MrC. THANKS!
 - 29-09-2006 updated: french language file
 - 29-09-2006 added: Fat16/32 support for USB memory sticks.  4GB limit in size, readonly support.
 - 29-09-2006 fixed: context menu for playlists, play button issue
 - 29-09-2006 fixed: ActivateWindow(WINDOW_FILES,path), if the path is not connectable, files window just shows a empty share view without a error message