@@ -358,7 +358,7 @@ public:
 
   static CStdString GetCachedMusicThumb(const CStdString &path);
   static CStdString GetCachedAlbumThumb(const CStdString &album, const CStdString &path);
-
+  static void WipeDir(const CStdString& strPath);
 private:
   static HANDLE m_hCurrentCpuUsage;
 };
